UI fixes/card fixes
Added home and return-button (which returns to earlier activity). Added slidecards for all categories and fixed "clickability" for all categories.

--- a/GreenTipsAlpha1/app/src/main/res/values/strings.xml
+++ b/GreenTipsAlpha1/app/src/main/res/values/strings.xml
@@ -11,7 +11,6 @@
     <string name="aboutButton">About</string>
     <string name="help">Help</string>
     <string name="chooseCat">Choose a category</string>
-
     <string name="category">Category</string>
 
     <string name="aboutapp">
@@ -39,7 +38,7 @@
 
     <string name="transport">Transport</string>
     <string name="outdoors">Outdoors</string>
-    <string name="worklife">Work life</string>
+    <string name="worklife">Working life</string>
     <string name="household">Household</string>
     <string name="sociallife">Social life</string>
 
@@ -53,19 +52,52 @@
     <string name="transporttip6">Topic 6</string>
     <string name="transporttip7">Topic 7</string>
 
+    <string name="householdtip1">Here we give information about the first tip, on click open this slide</string>
+    <string name="householdtip2">Here we give information about the second tip, on click open this slide</string>
+    <string name="householdtip3">Topic 3</string>
+    <string name="householdtip4">Topic 4</string>
+    <string name="householdtip5">Topic 5</string>
+    <string name="householdtip6">Topic 6</string>
+    <string name="householdtip7">Topic 7</string>
+
+    <string name="worklifetip1">Here we give information about the first tip, on click open this slide</string>
+    <string name="worklifetip2">Here we give information about the second tip, on click open this slide</string>
+    <string name="worklifetip3">Topic 3</string>
+    <string name="worklifetip4">Topic 4</string>
+    <string name="worklifetip5">Topic 5</string>
+    <string name="worklifetip6">Topic 6</string>
+    <string name="worklifetip7">Topic 7</string>
+
+    <string name="socialtip1">Here we give information about the first tip, on click open this slide</string>
+    <string name="socialtip2">Here we give information about the second tip, on click open this slide</string>
+    <string name="socialtip3">Topic 3</string>
+    <string name="socialtip4">Topic 4</string>
+    <string name="socialtip5">Topic 5</string>
+    <string name="socialtip6">Topic 6</string>
+    <string name="socialtip7">Topic 7</string>
+
+    <string name="outdoorstip1">Here we give information about the first tip, on click open this slide</string>
+    <string name="outdoorstip2">Here we give information about the second tip, on click open this slide</string>
+    <string name="outdoorstip3">Topic 3</string>
+    <string name="outdoorstip4">Topic 4</string>
+    <string name="outdoorstip5">Topic 5</string>
+    <string name="outdoorstip6">Topic 6</string>
+    <string name="outdoorstip7">Topic 7</string>
+
+
+
 
     <string name="string_green_tips">Green Tips</string>
     <string name="image_for_tips">image for tips</string>
-
     <string name="reminders">Reminders</string>
     <string name="image_for_reminders">image_for_reminders</string>
+
+
+
 
 
     <string name="name_reminder">Name your reminder</string>
     <string name="button_schedule_set">Set</string>
     <string name="button_schedule_cancel">Cancel</string>
-    <string name="testSlider">test för slider</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
