UI fixes and added functionality
Added functionality to slide-cards system and fixed the UI

--- a/GreenTipsAlpha1/app/src/main/res/values/strings.xml
+++ b/GreenTipsAlpha1/app/src/main/res/values/strings.xml
@@ -46,43 +46,43 @@
     <string name="chooseTip">Choose a tip</string>
     <string name="transporttip1">Here we give information about the first tip, on click open this slide</string>
     <string name="transporttip2">Here we give information about the second tip, on click open this slide</string>
-    <string name="transporttip3">Topic 3</string>
-    <string name="transporttip4">Topic 4</string>
-    <string name="transporttip5">Topic 5</string>
-    <string name="transporttip6">Topic 6</string>
-    <string name="transporttip7">Topic 7</string>
+    <string name="transporttip3">Here we give information about the second tip, on click open this slide</string>
+    <string name="transporttip4">Here we give information about the second tip, on click open this slide</string>
+    <string name="transporttip5">Here we give information about the second tip, on click open this slide</string>
+    <string name="transporttip6">Here we give information about the second tip, on click open this slide</string>
+    <string name="transporttip7">Here we give information about the second tip, on click open this slide</string>
 
     <string name="householdtip1">Here we give information about the first tip, on click open this slide</string>
     <string name="householdtip2">Here we give information about the second tip, on click open this slide</string>
-    <string name="householdtip3">Topic 3</string>
-    <string name="householdtip4">Topic 4</string>
-    <string name="householdtip5">Topic 5</string>
-    <string name="householdtip6">Topic 6</string>
-    <string name="householdtip7">Topic 7</string>
+    <string name="householdtip3">Here we give information about the second tip, on click open this slide</string>
+    <string name="householdtip4">Here we give information about the second tip, on click open this slide</string>
+    <string name="householdtip5">Here we give information about the second tip, on click open this slide</string>
+    <string name="householdtip6">Here we give information about the second tip, on click open this slide</string>
+    <string name="householdtip7">Here we give information about the second tip, on click open this slide</string>
 
     <string name="worklifetip1">Here we give information about the first tip, on click open this slide</string>
     <string name="worklifetip2">Here we give information about the second tip, on click open this slide</string>
-    <string name="worklifetip3">Topic 3</string>
-    <string name="worklifetip4">Topic 4</string>
-    <string name="worklifetip5">Topic 5</string>
-    <string name="worklifetip6">Topic 6</string>
-    <string name="worklifetip7">Topic 7</string>
+    <string name="worklifetip3">Here we give information about the second tip, on click open this slide</string>
+    <string name="worklifetip4">Here we give information about the second tip, on click open this slide</string>
+    <string name="worklifetip5">Here we give information about the second tip, on click open this slide</string>
+    <string name="worklifetip6">Here we give information about the second tip, on click open this slide</string>
+    <string name="worklifetip7">Here we give information about the second tip, on click open this slide</string>
 
     <string name="socialtip1">Here we give information about the first tip, on click open this slide</string>
     <string name="socialtip2">Here we give information about the second tip, on click open this slide</string>
-    <string name="socialtip3">Topic 3</string>
-    <string name="socialtip4">Topic 4</string>
-    <string name="socialtip5">Topic 5</string>
-    <string name="socialtip6">Topic 6</string>
-    <string name="socialtip7">Topic 7</string>
+    <string name="socialtip3">Here we give information about the second tip, on click open this slide</string>
+    <string name="socialtip4">Here we give information about the second tip, on click open this slide</string>
+    <string name="socialtip5">Here we give information about the second tip, on click open this slide5</string>
+    <string name="socialtip6">Here we give information about the second tip, on click open this slide</string>
+    <string name="socialtip7">Here we give information about the second tip, on click open this slide</string>
 
     <string name="outdoorstip1">Here we give information about the first tip, on click open this slide</string>
     <string name="outdoorstip2">Here we give information about the second tip, on click open this slide</string>
-    <string name="outdoorstip3">Topic 3</string>
-    <string name="outdoorstip4">Topic 4</string>
-    <string name="outdoorstip5">Topic 5</string>
-    <string name="outdoorstip6">Topic 6</string>
-    <string name="outdoorstip7">Topic 7</string>
+    <string name="outdoorstip3">Here we give information about the first tip, on click open this slide</string>
+    <string name="outdoorstip4">Here we give information about the first tip, on click open this slide</string>
+    <string name="outdoorstip5">Here we give information about the first tip, on click open this slide</string>
+    <string name="outdoorstip6">Here we give information about the first tip, on click open this slide</string>
+    <string name="outdoorstip7">Here we give information about the first tip, on click open this slide</string>
 
 
     <string name="string_green_tips">Green Tips</string>
@@ -94,5 +94,6 @@
     <string name="name_reminder">Name your reminder</string>
     <string name="button_schedule_set">Set</string>
     <string name="button_schedule_cancel">Cancel</string>
+    <string name="image_slide">image slide for slide functionality</string>
 
 </resources>
