--- a/GreenTipsAlpha1/app/src/main/res/values/strings.xml
+++ b/GreenTipsAlpha1/app/src/main/res/values/strings.xml
@@ -96,4 +96,54 @@
     <string name="button_schedule_cancel">Cancel</string>
     <string name="image_slide">image slide for slide functionality</string>
 
+    <string name="hint_button">Enter Your Task</string>
+    <string name="btn_schedule_set">Set</string>
+    <string name="btn_schedule_cancel">Cancel</string>
+
+    <string-array name="categories_spinner">
+        <item>Transport</item>
+        <item>Outdoors</item>
+        <item>Social Life</item>
+        <item>Work Life</item>
+    </string-array>
+
+    <string-array name="id_transport">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+    </string-array>
+
+    <string-array name="id_outdoors">
+        <item>8</item>
+        <item>9</item>
+        <item>10</item>
+        <item>11</item>
+        <item>12</item>
+        <item>13</item>
+        <item>14</item>
+    </string-array>
+
+    <string-array name="id_social_life">
+        <item>15</item>
+        <item>16</item>
+        <item>17</item>
+        <item>18</item>
+        <item>19</item>
+        <item>20</item>
+        <item>21</item>
+    </string-array>
+
+    <string-array name="id_work_life">
+        <item>22</item>
+        <item>23</item>
+        <item>24</item>
+        <item>25</item>
+        <item>26</item>
+        <item>27</item>
+        <item>28</item>
+    </string-array>
 </resources>
